fixed some alignments and bugs in phone cart and phone cart delete

--- a/frontend/src/app/pages/phone_shoppingListManage/phone_shoppingListManage.component.scss
+++ b/frontend/src/app/pages/phone_shoppingListManage/phone_shoppingListManage.component.scss
@@ -36,21 +36,21 @@
       .item-details {
         display: flex;
         align-items: center;
-        width: 98%;
+        width: 100%;
 
         .item-name {
           flex-grow: 0;
-          flex-basis: 40%; // Item name takes up 40% of the item-details width
+          flex-basis: 50%; // Item name takes up 40% of the item-details width
           overflow: hidden; // Ensures text doesn't overflow its container
           white-space: nowrap;
           text-overflow: ellipsis; // Add ellipsis if text overflows
-          font-size: 3.2vw;
+          font-size: 3vw;
           align-items: center;
         }
 
         .amount-selector {
           flex-grow: 0;
-          flex-basis: 25%; // Amount selector takes up 25% of the item-details width
+          flex-basis: 30%; // Amount selector takes up 25% of the item-details width
           display: flex;
           align-items: center;
           justify-content: center; // Center the buttons and amount within the selector
@@ -59,12 +59,12 @@
             border: none;
             background-color: #92C848;
             color: white;
-            padding: 5px 10px;
-            margin: 0 5px;
+            padding: 5px ;
+            margin: 0;
             border-radius: 5px;
             cursor: pointer;
             font-size: 3vw; // Ensure the font size is responsive
-            width: 2vw;
+            width: 3em;
           }
           span {
             min-width: 4vw;
@@ -73,7 +73,7 @@
         }
         .item-price {
           flex-grow: 0;
-          flex-basis: 15%; // Item price takes up 15% of the item-details width
+          flex-basis: 20%; // Item price takes up 15% of the item-details width
           font-weight: bold;
           text-align: center; // Align the text to the right
         }
@@ -95,14 +95,29 @@
 button {
   background-color: #92C848;
   color: white;
-  padding: 15px;
+  padding: 3px;
   border: none;
   border-radius: 20px;
-  width: 40%;
+  width: 30%;
   font-size: 1.2em;
   cursor: pointer;
   margin: 20px;
 }
+
+
+.button2 {
+  background-color: white;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 
 
 
